--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,21 +154,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "6\n",
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for number in [0, 1, 2]:\n",
     "    print(number + 5)"
